--- a/evolutionary-algorithms/multi_objective_knapsack.ipynb
+++ b/evolutionary-algorithms/multi_objective_knapsack.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,8 +95,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fitness Functions\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,20 +127,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
-    "W_EC = -0.5\n",
-    "W_R = 0.3\n",
-    "W_TCT = -0.2\n",
-    "\n",
     "def fitness2(genome):\n",
     "    # linear combo of weights and vars\n",
+    "    W_EC = -0.5\n",
+    "    W_R = 0.3\n",
+    "    W_TCT = -0.2\n",
+    "\n",
     "    count = genome.count(1)\n",
     "    ec = 0\n",
     "    r = 0\n",
     "    tct = 0\n",
+    "\n",
     "    for i, gene in enumerate(genome):\n",
     "        if gene == 1:\n",
     "            ec += robots[i].ec\n",
@@ -147,57 +155,98 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 181,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Fitness function: fitness1\n",
-      "Best solution: [1, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0]\n",
-      "Fitness score: 1.508905852417303\n",
-      "Total energy: 304\n",
-      "Mean Reliability /100: 65.88888888888889\n",
-      "Mean Time to task completion /100: 43.666666666666664\n",
-      "\n",
-      "Fitness function: fitness2\n",
-      "Best solution: [1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1]\n",
-      "Fitness score: 1.467741935483871\n",
-      "Total energy: 495\n",
-      "Mean Reliability /100: 45.5\n",
-      "Mean Time to task completion /100: 31.0\n"
-     ]
-    }
-   ],
    "source": [
-    "def run(fitness_function, population):\n",
-    "    for generation in range(NUMBER_GENERATIONS):\n",
-    "        # fitness eval\n",
-    "        fitness_scores = [fitness_function(genome) + 0.01 for genome in population]\n",
+    "# Parent Selection\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wheel_roulette(population, fitness_function):\n",
+    "    # fitness eval\n",
+    "    fitness_scores = [fitness_function(genome) + 0.001 for genome in population]\n",
     "\n",
-    "        # parents selection ! with fitness2 fitness can be negative\n",
-    "        selected_parents = random.choices(\n",
-    "            population, weights=fitness_scores, k=POPULATION_SIZE\n",
-    "        )\n",
+    "    # parents selection ! with fitness2 fitness can be negative\n",
+    "    selected_parents = random.choices(\n",
+    "        population,\n",
+    "        weights=fitness_scores,\n",
+    "        k=POPULATION_SIZE,  # select all as parents anyway\n",
+    "    )\n",
+    "\n",
+    "    return selected_parents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Oh they are having sex\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reproduce1(parent1, parent2):\n",
+    "    # recombination\n",
+    "    child1 = parent1[: NUMBER_ROBOT // 2] + parent2[NUMBER_ROBOT // 2 :]\n",
+    "    child2 = parent2[: NUMBER_ROBOT // 2] + parent1[NUMBER_ROBOT // 2 :]\n",
+    "\n",
+    "    # mutation\n",
+    "    child1 = [1 - gene if random.random() < MUTATION_RATE else gene for gene in child1]\n",
+    "    child2 = [\n",
+    "        1 - gene if random.random() < MUTATION_RATE else gene for gene in child2\n",
+    "    ]  # chance of mutation ie invert gene\n",
+    "\n",
+    "    return child1, child2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reproduce2(parent1, parent2):\n",
+    "    # mutation\n",
+    "    child1 = [1 - gene if random.random() < MUTATION_RATE else gene for gene in parent1]\n",
+    "    child2 = [\n",
+    "        1 - gene if random.random() < MUTATION_RATE else gene for gene in parent2\n",
+    "    ]  # chance of mutation ie invert gene\n",
+    "\n",
+    "    return child1, child2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run(population, fitness_function, parent_selection, reproduction_function):\n",
+    "    for generation in range(NUMBER_GENERATIONS):\n",
+    "        # parent selection\n",
+    "        selected_parents = parent_selection(population, fitness_function)\n",
     "\n",
     "        new_population = []\n",
-    "        for _ in range(POPULATION_SIZE // 2):\n",
+    "        for _ in range(POPULATION_SIZE):\n",
     "            parent1, parent2 = random.choices(selected_parents, k=2)\n",
     "\n",
-    "            # recombination\n",
-    "            child1 = parent1[: NUMBER_ROBOT // 2] + parent2[NUMBER_ROBOT // 2 :]\n",
-    "            child2 = parent2[: NUMBER_ROBOT // 2] + parent1[NUMBER_ROBOT // 2 :]\n",
-    "\n",
-    "            # mutation\n",
-    "            child1 = [\n",
-    "                1 - gene if random.random() < MUTATION_RATE else gene for gene in child1\n",
-    "            ]\n",
-    "            child2 = [\n",
-    "                1 - gene if random.random() < MUTATION_RATE else gene for gene in child2\n",
-    "            ]  # chance of mutation ie invert gene\n",
+    "            child1, child2 = reproduction_function(parent1, parent2)\n",
     "\n",
     "            new_population.append(child1)\n",
     "            new_population.append(child2)\n",
@@ -207,25 +256,98 @@
     "    # best solution\n",
     "    best_chromosome = max(population, key=fitness1)\n",
     "    print()\n",
-    "    print(\"Fitness function:\", fitness_function.__name__)\n",
-    "    print(\"Best solution:\", best_chromosome)\n",
-    "    print(\"Fitness score:\", fitness1(best_chromosome))\n",
     "    print(\n",
-    "        \"Total energy:\",\n",
+    "        fitness_function.__name__\n",
+    "        + \" - \"\n",
+    "        + parent_selection.__name__\n",
+    "        + \" - \"\n",
+    "        + reproduction_function.__name__\n",
+    "    )\n",
+    "    print(\" Best solution:\", best_chromosome)\n",
+    "    print(\n",
+    "        \" Total EC     :\",\n",
     "        sum([robots[i].ec for i, gene in enumerate(best_chromosome) if gene == 1]),\n",
     "    )\n",
     "    print(\n",
-    "        \"Mean Reliability /100:\",\n",
+    "        \" Mean R /100  :\",\n",
     "        np.mean([robots[i].r for i, gene in enumerate(best_chromosome) if gene == 1]),\n",
     "    )\n",
     "    print(\n",
-    "        \"Mean Time to task completion /100:\",\n",
+    "        \" Mean TCT /100:\",\n",
     "        np.mean([robots[i].tct for i, gene in enumerate(best_chromosome) if gene == 1]),\n",
     "    )\n",
     "\n",
-    "\n",
-    "run(fitness1, population)\n",
-    "run(fitness2, population)"
+    "    return best_chromosome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "fitness1 - wheel_roulette - reproduce1\n",
+      " Best solution: [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      " Total EC     : 1\n",
+      " Mean R /100  : 48.0\n",
+      " Mean TCT /100: 1.0\n",
+      "\n",
+      "fitness2 - wheel_roulette - reproduce1\n",
+      " Best solution: [0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0]\n",
+      " Total EC     : 51\n",
+      " Mean R /100  : 69.75\n",
+      " Mean TCT /100: 14.0\n",
+      "\n",
+      "fitness1 - wheel_roulette - reproduce2\n",
+      " Best solution: [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      " Total EC     : 1\n",
+      " Mean R /100  : 48.0\n",
+      " Mean TCT /100: 1.0\n",
+      "\n",
+      "fitness2 - wheel_roulette - reproduce2\n",
+      " Best solution: [0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0]\n",
+      " Total EC     : 55\n",
+      " Mean R /100  : 70.0\n",
+      " Mean TCT /100: 15.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "best1 = run(population, fitness1, wheel_roulette, reproduce1)\n",
+    "best2 = run(population, fitness2, wheel_roulette, reproduce1)\n",
+    "best3 = run(population, fitness1, wheel_roulette, reproduce2)\n",
+    "best4 = run(population, fitness2, wheel_roulette, reproduce2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trying smt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Robot(ec=1, r=48, tct=1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "best = np.logical_and(best1, best2)\n",
+    "best = np.logical_and(best, best3)\n",
+    "best = np.logical_and(best, best4)\n",
+    "print([robots[i] for i in range(NUMBER_ROBOT) if best[i] == 1])"
    ]
   }
  ],
