nim lab but idk the template is all weird

--- a/lab2-nim-es/lab2_nim.ipynb
+++ b/lab2-nim-es/lab2_nim.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "from pprint import pprint, pformat\n",
     "from collections import namedtuple\n",
     "import random\n",
-    "from copy import deepcopy\n"
+    "from copy import deepcopy"
    ]
   },
   {
@@ -65,16 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nimply = namedtuple(\"Nimply\", \"row, num_objects\")\n"
+    "Nimply = namedtuple(\"Nimply\", \"row, num_objects\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
     "        row, num_objects = ply\n",
     "        assert self._rows[row] >= num_objects\n",
     "        assert self._k is None or num_objects <= self._k\n",
-    "        self._rows[row] -= num_objects\n"
+    "        self._rows[row] -= num_objects"
    ]
   },
   {
@@ -121,32 +121,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pure_random(state: Nim) -> Nimply:\n",
     "    \"\"\"A completely random move\"\"\"\n",
-    "    row = random.choice([r for r, c in enumerate(state.rows) if c > 0]) # select random non empty row\n",
-    "    num_objects = random.randint(1, state.rows[row]) # select random number of objects to be removed from row\n",
-    "    return Nimply(row, num_objects) #return new Nimply object for that row with updated number of objects\n"
+    "    row = random.choice(\n",
+    "        [r for r, c in enumerate(state.rows) if c > 0]\n",
+    "    )  # select random non empty row\n",
+    "    num_objects = random.randint(\n",
+    "        1, state.rows[row]\n",
+    "    )  # select random number of objects to be removed from row\n",
+    "    return Nimply(\n",
+    "        row, num_objects\n",
+    "    )  # return new Nimply object for that row with updated number of objects"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gabriele(state: Nim) -> Nimply:\n",
     "    \"\"\"Pick always the maximum possible number of the lowest row\"\"\"\n",
-    "    possible_moves = [(r, o) for r, c in enumerate(state.rows) for o in range(1, c + 1)] #create list of all possible moves\n",
-    "    return Nimply(*max(possible_moves, key=lambda m: (-m[0], m[1]))) #return Nimply object with maximum number of objects from lowest row\n"
+    "    possible_moves = [\n",
+    "        (r, o) for r, c in enumerate(state.rows) for o in range(1, c + 1)\n",
+    "    ]  # create list of all possible moves\n",
+    "    return Nimply(\n",
+    "        *max(possible_moves, key=lambda m: (-m[0], m[1]))\n",
+    "    )  # return Nimply object with maximum number of objects from lowest row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +176,7 @@
     "    num_objects = int(\n",
     "        genome[\"love_small\"] * state.rows[row]\n",
     "    )  # select number of objects to be removed from row\n",
-    "    \n",
+    "\n",
     "    return Nimply(\n",
     "        row, num_objects\n",
     "    )  # return Nimply object for that row with updated number of objects"
@@ -174,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,9 +227,17 @@
     "    If no such moves exist, it selects all moves and chooses one at random\n",
     "    to return as the optimal move\n",
     "    \"\"\"\n",
+    "\n",
+    "    # from archimedes-lab.org:\n",
+    "\n",
+    "    # To win at Nim-game, always make a move, whenever possible, that leaves a\n",
+    "    # configuration with a ZERO “Nim sum”, that is with ZERO unpaired multiple(s)\n",
+    "    # of 4, 2 or 1. Otherwise, your opponent has the advantage, and you have to\n",
+    "    # depend on his/her committing an error in order to win.\n",
+    "\n",
     "    analysis = analize(state)\n",
     "    logging.debug(f\"analysis:\\n{pformat(analysis)}\")\n",
-    "    spicy_moves = [ply for ply, ns in analysis[\"possible_moves\"].items() if ns != 0]\n",
+    "    spicy_moves = [ply for ply, ns in analysis[\"possible_moves\"].items() if ns == 0]\n",
     "    if not spicy_moves:\n",
     "        spicy_moves = list(analysis[\"possible_moves\"].keys())\n",
     "    ply = random.choice(spicy_moves)\n",
@@ -243,121 +261,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:init : <1 3 5 7 9>\n",
-      "\n",
-      "INFO:root:ply: player 0 plays Nimply(row=3, num_objects=6)\n",
-      "INFO:root:status: <1 3 5 1 9>\n",
-      "\n",
-      "INFO:root:ply: player 1 plays Nimply(row=0, num_objects=0)\n",
-      "INFO:root:status: <1 3 5 1 9>\n",
-      "\n",
-      "INFO:root:ply: player 0 plays Nimply(row=4, num_objects=5)\n",
-      "INFO:root:status: <1 3 5 1 4>\n",
-      "\n",
-      "INFO:root:ply: player 1 plays Nimply(row=0, num_objects=0)\n",
-      "INFO:root:status: <1 3 5 1 4>\n",
-      "\n",
-      "INFO:root:ply: player 0 plays Nimply(row=2, num_objects=3)\n",
-      "INFO:root:status: <1 3 2 1 4>\n",
-      "\n",
-      "INFO:root:ply: player 1 plays Nimply(row=0, num_objects=0)\n",
-      "INFO:root:status: <1 3 2 1 4>\n",
-      "\n",
-      "INFO:root:ply: player 0 plays Nimply(row=4, num_objects=1)\n",
-      "INFO:root:status: <1 3 2 1 3>\n",
-      "\n",
-      "INFO:root:ply: player 1 plays Nimply(row=0, num_objects=0)\n",
-      "INFO:root:status: <1 3 2 1 3>\n",
-      "\n",
-      "INFO:root:ply: player 0 plays Nimply(row=4, num_objects=1)\n",
-      "INFO:root:status: <1 3 2 1 2>\n",
-      "\n",
-      "INFO:root:ply: player 1 plays Nimply(row=0, num_objects=0)\n",
-      "INFO:root:status: <1 3 2 1 2>\n",
-      "\n",
-      "INFO:root:ply: player 0 plays Nimply(row=4, num_objects=2)\n",
-      "INFO:root:status: <1 3 2 1 0>\n",
-      "\n",
-      "INFO:root:ply: player 1 plays Nimply(row=4, num_objects=0)\n",
-      "INFO:root:status: <1 3 2 1 0>\n",
-      "\n",
-      "INFO:root:ply: player 0 plays Nimply(row=2, num_objects=1)\n",
-      "INFO:root:status: <1 3 1 1 0>\n",
-      "\n",
-      "INFO:root:ply: player 1 plays Nimply(row=4, num_objects=0)\n",
-      "INFO:root:status: <1 3 1 1 0>\n",
-      "\n",
-      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=1)\n",
-      "INFO:root:status: <0 3 1 1 0>\n",
-      "\n",
-      "INFO:root:ply: player 1 plays Nimply(row=0, num_objects=0)\n",
-      "INFO:root:status: <0 3 1 1 0>\n",
-      "\n",
-      "INFO:root:ply: player 0 plays Nimply(row=2, num_objects=1)\n",
-      "INFO:root:status: <0 3 0 1 0>\n",
-      "\n",
-      "INFO:root:ply: player 1 plays Nimply(row=0, num_objects=0)\n",
-      "INFO:root:status: <0 3 0 1 0>\n",
-      "\n",
-      "INFO:root:ply: player 0 plays Nimply(row=1, num_objects=3)\n",
-      "INFO:root:status: <0 0 0 1 0>\n",
-      "\n",
-      "INFO:root:ply: player 1 plays Nimply(row=0, num_objects=0)\n",
-      "INFO:root:status: <0 0 0 1 0>\n",
-      "\n",
-      "INFO:root:ply: player 0 plays Nimply(row=3, num_objects=1)\n",
-      "INFO:root:status: <0 0 0 0 0>\n",
-      "\n",
-      "INFO:root:status: Player 1 won using adaptive1 startegy!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "logging.getLogger().setLevel(logging.INFO)\n",
+    "# logging.getLogger().setLevel(logging.INFO)\n",
     "\n",
-    "# strategy = (optimal, pure_random)\n",
-    "# strategy = (gabriele, adaptive1)\n",
-    "strategy = (optimal, adaptive1)\n",
+    "# # strategy = (optimal, pure_random)\n",
+    "# # strategy = (gabriele, adaptive1)\n",
+    "# strategy = (optimal, adaptive1)\n",
     "\n",
-    "nim = Nim(5)\n",
-    "logging.info(f\"init : {nim}\\n\")\n",
-    "player = 0\n",
-    "while nim:\n",
-    "    ply = strategy[player](nim)\n",
-    "    logging.info(f\"ply: player {player} plays {ply}\")\n",
-    "    nim.nimming(ply)\n",
-    "    logging.info(f\"status: {nim}\\n\")\n",
-    "    player = 1 - player\n",
-    "logging.info(f\"status: Player {player} won using {strategy[player].__name__} startegy!\")"
+    "# nim = Nim(5)\n",
+    "# logging.info(f\"init : {nim}\\n\")\n",
+    "# player = 0\n",
+    "# while nim:\n",
+    "#     ply = strategy[player](nim)\n",
+    "#     logging.info(f\"ply: player {player} plays {ply}\")\n",
+    "#     nim.nimming(ply)\n",
+    "#     logging.info(f\"status: {nim}\\n\")\n",
+    "#     player = 1 - player\n",
+    "# logging.info(f\"status: Player {player} won using {strategy[player].__name__} startegy!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TEST\n",
+    "\n",
+    "Longest Nim Match is if every player takes away only one stick per turn -> numbersticks-1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# evolutionary params\n",
+    "POPULATION_SIZE = 20\n",
+    "MUTATION_RATE = 0.01\n",
+    "NUMBER_GENERATIONS = 100\n",
+    "\n",
+    "# game params\n",
+    "NIM_DIM = 5\n",
+    "MAX_NUMBER_MOVES = sum([i * 2 + 1 for i in range(NIM_DIM)])\n",
+    "STRATEGIES = [pure_random, gabriele, adaptive1]\n",
+    "NUMBER_STRATEGIES = len(STRATEGIES)\n",
+    "\n",
+    "# number on matches in fitness\n",
+    "FITNESS_MATCHES = 10\n",
+    "\n",
+    "# expert agent -> each move is optimal move\n",
+    "EXPERT_AGENT = [optimal] * MAX_NUMBER_MOVES"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generate_random_agent():\n",
+    "    return [random.choice(STRATEGIES) for _ in range(MAX_NUMBER_MOVES)]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def nim_match(agent1):\n",
+    "    strategy = (agent1, EXPERT_AGENT)\n",
+    "\n",
+    "    nim = Nim(5)\n",
+    "    player = random.randint(0, 1)\n",
+    "    number_moves = 0\n",
+    "    while nim:\n",
+    "        ply = strategy[player][number_moves](nim)\n",
+    "        nim.nimming(ply)\n",
+    "        player = 1 - player\n",
+    "\n",
+    "    return 1 - player  # 1 if agent won, 0 if expert won\n",
+    "\n",
+    "\n",
+    "# nim_match(EXPERT_AGENT,EXPERT_AGENT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "\n",
+    "def fitness(agent):\n",
+    "    # plays against expert by exectuing in order the moves of the agent and the expert agent\n",
+    "    # fitness is number of matches won by agent with max 10 matches\n",
+    "    runs = [nim_match(agent) for _ in range(FITNESS_MATCHES)]\n",
+    "    return sum(runs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mutate(agent):\n",
+    "    # swap two move strategies\n",
+    "    if random.random() < MUTATION_RATE:\n",
+    "        swap_index1, swap_index2 = random.sample(range(MAX_NUMBER_MOVES), 2)\n",
+    "        agent[swap_index1], agent[swap_index2] = (\n",
+    "            agent[swap_index2],\n",
+    "            agent[swap_index1],\n",
+    "        )\n",
+    "\n",
+    "    # change one move strategy to another strategy\n",
+    "    if random.random() < MUTATION_RATE:\n",
+    "        agent[random.randint(0, MAX_NUMBER_MOVES - 1)] = random.choice(STRATEGIES)\n",
+    "\n",
+    "    return agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reproduce(agent1, agent2):\n",
+    "    # crossover\n",
+    "    # random split of the two agents and then concatenate them\n",
+    "    agent1_index = random.randint(0, MAX_NUMBER_MOVES - 1)\n",
+    "    return agent1[:agent1_index] + agent2[agent1_index:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Original -> ['pure_random', 'pure_random', 'gabriele', 'gabriele', 'gabriele', 'adaptive1', 'adaptive1', 'pure_random', 'pure_random', 'gabriele', 'gabriele', 'adaptive1', 'pure_random', 'adaptive1', 'pure_random', 'gabriele', 'gabriele', 'adaptive1', 'pure_random', 'gabriele', 'gabriele', 'adaptive1', 'pure_random', 'adaptive1', 'adaptive1']\n",
+      "Fitness       -> 10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [03:04<00:00,  1.84s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Best Agent -> ['pure_random', 'adaptive1', 'adaptive1', 'gabriele', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'adaptive1', 'pure_random', 'adaptive1', 'adaptive1', 'pure_random', 'gabriele', 'pure_random', 'pure_random', 'pure_random', 'pure_random', 'gabriele', 'adaptive1', 'pure_random']\n",
+      "Fitness    -> 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "# run the algo\n",
+    "\n",
+    "population = [generate_random_agent() for _ in range(POPULATION_SIZE)]\n",
+    "\n",
+    "best_original = max(population, key=fitness)\n",
+    "print(\"Best Original ->\", [strat.__name__ for strat in best_original])\n",
+    "print(\"Fitness       ->\", fitness(best_original))\n",
+    "\n",
+    "\n",
+    "for generation in tqdm(range(NUMBER_GENERATIONS)):\n",
+    "    # evaluate current generation\n",
+    "    fitness_scores = [fitness(agent) for agent in population]\n",
+    "\n",
+    "    # next gen parents\n",
+    "    selected_parents = random.choices(\n",
+    "        population, weights=fitness_scores, k=POPULATION_SIZE\n",
+    "    )\n",
+    "\n",
+    "    # create next gen\n",
+    "    new_population = []\n",
+    "    for i in range(POPULATION_SIZE):\n",
+    "        agent1 = random.choice(selected_parents)\n",
+    "        agent2 = random.choice(selected_parents)\n",
+    "        new_population.append(mutate(reproduce(agent1, agent2)))\n",
+    "\n",
+    "    population = new_population\n",
+    "\n",
+    "# print best agent\n",
+    "best_agent = max(population, key=fitness)\n",
+    "print()\n",
+    "print(\"Best Agent ->\", [strat.__name__ for strat in best_agent])\n",
+    "print(\"Fitness    ->\", fitness(best_agent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nim_match(best_agent)"
+   ]
   }
  ],
  "metadata": {
