--- a/evolutionary-algorithms/tsp.ipynb
+++ b/evolutionary-algorithms/tsp.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -212,12 +212,7 @@
     "population = [generate_random_tour(NUMBER_CITIES) for i in range(POPULATION_SIZE)]\n",
     "\n",
     "\n",
-    "for i in range(NUMBER_GENERATIONS):\n",
-    "    if NUMBER_CITIES <= 10:\n",
-    "        print(\"Generation\", i)\n",
-    "        for i in range(POPULATION_SIZE):\n",
-    "            print(population[i])\n",
-    "\n",
+    "for generation in range(NUMBER_GENERATIONS):\n",
     "    # select the best parents by tournament selection\n",
     "    tournaments_winners = tournament_selection(population, distance_matrix)\n",
     "\n",
@@ -225,6 +220,10 @@
     "    new_population = reproduce(tournaments_winners)\n",
     "\n",
     "    population = new_population\n",
+    "\n",
+    "    best_fitness_current = min(\n",
+    "        fitness(individual, distance_matrix) for individual in population\n",
+    "    )\n",
     "\n",
     "\n",
     "# print the best tour\n",
