--- a/lab2-nim-es/lab2_nim.ipynb
+++ b/lab2-nim-es/lab2_nim.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
     "\n",
     "    analysis = analize(state)\n",
     "    logging.debug(f\"analysis:\\n{pformat(analysis)}\")\n",
-    "    spicy_moves = [ply for ply, ns in analysis[\"possible_moves\"].items() if ns == 0]\n",
+    "    spicy_moves = [ply for ply, ns in analysis[\"possible_moves\"].items() if ns != 0]\n",
     "    if not spicy_moves:\n",
     "        spicy_moves = list(analysis[\"possible_moves\"].keys())\n",
     "    ply = random.choice(spicy_moves)\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,14 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Original -> ['pure_random', 'pure_random', 'gabriele', 'gabriele', 'gabriele', 'adaptive1', 'adaptive1', 'pure_random', 'pure_random', 'gabriele', 'gabriele', 'adaptive1', 'pure_random', 'adaptive1', 'pure_random', 'gabriele', 'gabriele', 'adaptive1', 'pure_random', 'gabriele', 'gabriele', 'adaptive1', 'pure_random', 'adaptive1', 'adaptive1']\n",
+      "Best Original -> ['adaptive1', 'gabriele', 'gabriele', 'pure_random', 'gabriele', 'adaptive1', 'adaptive1', 'gabriele', 'adaptive1', 'gabriele', 'gabriele', 'adaptive1', 'pure_random', 'adaptive1', 'pure_random', 'pure_random', 'gabriele', 'gabriele', 'adaptive1', 'adaptive1', 'pure_random', 'pure_random', 'pure_random', 'adaptive1', 'gabriele']\n",
       "Fitness       -> 10\n"
      ]
     },
@@ -417,7 +417,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [03:04<00:00,  1.84s/it]\n"
+      "100%|██████████| 100/100 [05:36<00:00,  3.37s/it]\n"
      ]
     },
     {
@@ -425,7 +425,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Best Agent -> ['pure_random', 'adaptive1', 'adaptive1', 'gabriele', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'adaptive1', 'pure_random', 'adaptive1', 'adaptive1', 'pure_random', 'gabriele', 'pure_random', 'pure_random', 'pure_random', 'pure_random', 'gabriele', 'adaptive1', 'pure_random']\n",
+      "Best Agent -> ['adaptive1', 'pure_random', 'pure_random', 'pure_random', 'gabriele', 'adaptive1', 'adaptive1', 'pure_random', 'gabriele', 'adaptive1', 'adaptive1', 'gabriele', 'pure_random', 'adaptive1', 'pure_random', 'pure_random', 'gabriele', 'adaptive1', 'adaptive1', 'adaptive1', 'gabriele', 'gabriele', 'pure_random', 'adaptive1', 'adaptive1']\n",
       "Fitness    -> 10\n"
      ]
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "1"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
